# personal-gym-agent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  COACHING_MODEL.md  DECISIONS.md  PRD.md  debugging.md  learning-notes.md
skills/auto-commit-checkpoints/: SKILL.md
skills/auto-commit-checkpoints/agents/: openai.yaml
skills/auto-commit-checkpoints/scripts/: checkpoint.py
src/gym_trainer/: __init__.py  config.py  main.py
src/gym_trainer/agent/: debug.py  graph.py  persistence.py  prompts.py  reasoning.py  responses.py  state.py  tools.py
src/gym_trainer/domain/: __init__.py  feedback.py  llm_plans.py  plans.py  profile.py  progression.py  scorecard.py
src/gym_trainer/integrations/: __init__.py  openai_client.py
src/gym_trainer/storage/: __init__.py  sqlite.py
src/gym_trainer/workspace/: __init__.py  plans.py  profile.py
tests/: test_cli.py  test_config.py  test_feedback.py  test_graph_smoke.py  test_llm_plans.py  test_plans.py  test_profile.py  test_progression.py  test_scorecard.py  test_tools.py
workspace/: current_plan.md
