[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "personal-gym-agent"
version = "0.1.0"
description = "LangGraph sandbox for a conversational personal gym trainer agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gym_trainer"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
